tests/regression/errors/basic/syntax_error_22.csd
// Syntax error test 22 - missing semicolon
sus x drip = 22
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
